Bug 317926, Bookmark manager's localized title is not displayed properly.  Throw strings around in UTF-8.  Original patch by <waveridervsnrz@yahoo.co.jp>, thanks also to Torben and biesi.  Camino-only, npotdb.  r=smfr